@@ -27,12 +27,16 @@
 
 package com.mewna.catnip.shard.buffer;
 
-import com.google.common.collect.ImmutableSet;
-import com.mewna.catnip.entity.impl.ChunkingDoneImpl;
+import com.grack.nanojson.JsonObject;
+import com.mewna.catnip.entity.impl.lifecycle.ChunkingDoneImpl;
+import com.mewna.catnip.entity.impl.lifecycle.MemberChunkRerequestImpl;
+import com.mewna.catnip.shard.GatewayIntent;
 import com.mewna.catnip.shard.LifecycleEvent;
+import com.mewna.catnip.shard.LifecycleState;
+import com.mewna.catnip.shard.ShardInfo;
 import com.mewna.catnip.util.JsonUtil;
-import io.vertx.core.Future;
-import io.vertx.core.json.JsonObject;
+import com.mewna.catnip.util.rx.RxHelpers;
+import io.reactivex.rxjava3.core.Completable;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.Value;
@@ -44,7 +48,6 @@ import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentLinkedDeque;
 
-import static com.mewna.catnip.shard.CatnipShard.LARGE_THRESHOLD;
 import static com.mewna.catnip.shard.DiscordEvent.Raw;
 
 /**
@@ -57,7 +60,7 @@ import static com.mewna.catnip.shard.DiscordEvent.Raw;
  */
 @SuppressWarnings("unused")
 public class CachingBuffer extends AbstractBuffer {
-    private static final Set<String> CACHE_EVENTS = ImmutableSet.of(
+    private static final Set<String> CACHE_EVENTS = Set.of(
             // Lifecycle
             Raw.READY,
             // Channels
@@ -78,7 +81,7 @@ public class CachingBuffer extends AbstractBuffer {
             Raw.VOICE_STATE_UPDATE
     );
     
-    private static final Set<String> DELETE_EVENTS = ImmutableSet.of(
+    private static final Set<String> DELETE_EVENTS = Set.of(
             // Channels
             Raw.CHANNEL_DELETE,
             // Guilds
@@ -93,11 +96,11 @@ public class CachingBuffer extends AbstractBuffer {
     
     @Override
     public void buffer(final JsonObject event) {
-        final JsonObject shardData = event.getJsonObject("shard");
-        final int id = shardData.getInteger("id");
+        final JsonObject shardData = event.getObject("shard");
+        final int id = shardData.getInt("id");
         final String type = event.getString("t");
         
-        final JsonObject d = event.getJsonObject("d");
+        final JsonObject d = event.getObject("d");
         final BufferState bufferState = buffers.get(id);
         switch(type) {
             case Raw.READY: {
@@ -125,78 +128,77 @@ public class CachingBuffer extends AbstractBuffer {
     }
     
     private void handleReady(final int shardId, final JsonObject event) {
-        final JsonObject payloadData = event.getJsonObject("d");
+        final JsonObject payloadData = event.getObject("d");
         final String eventType = event.getString("t");
-        final Set<String> guilds = JsonUtil.toMutableSet(payloadData.getJsonArray("guilds"), g -> g.getString("id"));
+        final Set<String> guilds = JsonUtil.toMutableSet(payloadData.getArray("guilds"), g -> g.getString("id"));
         buffers.put(shardId, new BufferState(shardId, guilds));
         catnip().logAdapter().debug("Prepared new BufferState for shard {} with {} guilds.", shardId, guilds.size());
         // READY is also a cache event, as it does come with
         // information about the current user
-        maybeCache(eventType, shardId, payloadData).setHandler(_res -> emitter().emit(event));
+        //noinspection ResultOfMethodCallIgnored
+        maybeCache(eventType, shardId, payloadData).subscribe(() -> emitter().emit(event));
     }
     
     private void handleGuildCreate(final BufferState bufferState, final JsonObject event) {
         final int shardId = bufferState.id();
-        final JsonObject payloadData = event.getJsonObject("d");
+        final JsonObject payloadData = event.getObject("d");
         final String guild = payloadData.getString("id");
         // Make sure to cache guild
         // This will always succeed unless something goes horribly wrong
-        maybeCache(Raw.GUILD_CREATE, shardId, payloadData).setHandler(_res -> {
+        //noinspection ResultOfMethodCallIgnored
+        maybeCache(Raw.GUILD_CREATE, shardId, payloadData).subscribe(() -> {
             // Add the guild to be awaited so that we can buffer members
-            bufferState.awaitGuild(guild);
+            bufferState.awaitGuild(guild, event);
             
             // Trigger member chunking if needed
-            final Integer memberCount = payloadData.getInteger("member_count");
-            if(catnip().chunkMembers() && memberCount > LARGE_THRESHOLD) {
-                // If we're chunking members, calculate how many chunks we have to await
-                int chunks = memberCount / 1000;
-                if(memberCount % 1000 != 0) {
-                    // Not a perfect 1k, add a chunk to make up for how math works
-                    chunks += 1;
-                }
-                bufferState.initialGuildChunkCount(guild, chunks, event);
+            final int memberCount = payloadData.getInt("member_count");
+            // TODO: v6 pre-intents compatibility hack
+            // REQUEST_GUILD_MEMBERS when using intents requires GUILD_MEMBERS
+            // intent when requesting the entire guild member list when using
+            // intents.
+            // See https://github.com/discordapp/discord-api-docs/pull/1307#issuecomment-581561519
+            final boolean canChunkViaIntents = catnip().options().intents().isEmpty()
+                    || catnip().options().intents().contains(GatewayIntent.GUILD_MEMBERS);
+            if(canChunkViaIntents && catnip().options().chunkMembers() && memberCount > catnip().options().largeThreshold()) {
                 // Actually send the chunking request
                 catnip().chunkMembers(guild);
-                // I hate this
-                final int finalChunks = chunks;
-                catnip().vertx().setTimer(catnip().memberChunkTimeout(), __ -> {
-                    if(bufferState.guildChunkCount().containsKey(guild)) {
-                        final Counter counter = bufferState.guildChunkCount().get(guild);
-                        if(counter != null) {
-                            // Yeah, I know it shouldn't be an issue, but
-                            // honestly at this point I don't really trust this
-                            // class to work right :I
-                            // Rewrite when
-                            if(counter.count != 0) {
-                                catnip().logAdapter()
-                                        .warn("Didn't recv. member chunks for guild {} in time, re-requesting... " +
-                                                        "If you see this a lot, you should probably increase the value of " +
-                                                        "CatnipOptions#memberChunkTimeout.",
-                                                guild);
-                                // Reset chunk count
-                                bufferState.initialGuildChunkCount(guild, finalChunks, event);
-                                catnip().chunkMembers(guild);
-                                catnip().vertx().setTimer(catnip().memberChunkTimeout(), ___ -> {
-                                    if(bufferState.guildChunkCount().containsKey(guild)) {
-                                        final Counter counterTwo = bufferState.guildChunkCount().get(guild);
-                                        if(counterTwo != null && finalChunks - counterTwo.count() > 0) {
-                                            catnip().logAdapter()
-                                                    .warn("Didn't recv. member chunks for guild {} after {}ms even " +
-                                                                    "after retrying (missing {} chunks)! You should probably " +
-                                                                    "increase the value of CatnipOptions#memberChunkTimeout!",
-                                                            guild, catnip().memberChunkTimeout(),
-                                                            finalChunks - counterTwo.count());
-                                        }
-                                    }
-                                });
-                            }
+                catnip().taskScheduler().setTimer(catnip().options().memberChunkTimeout(), taskId -> {
+                    if(catnip().shardManager().shard(shardId).lifecycleState() != LifecycleState.LOGGED_IN) {
+                        catnip().logAdapter().warn("Chunk rerequest task {} for disconnected shard {}, cancelling!",
+                                taskId, shardId);
+                        return;
+                    }
+                    if(bufferState.guildCreateCache().containsKey(guild)) {
+                        catnip().logAdapter()
+                                .warn("Didn't recv. member chunks for guild {} in time, re-requesting... " +
+                                                "If you see this a lot, you should probably increase the value of " +
+                                                "CatnipOptions#memberChunkTimeout.",
+                                        guild);
+                        if(catnip().options().manualChunkRerequesting()) {
+                            emitter().emit(LifecycleEvent.Raw.MEMBER_CHUNK_REREQUEST,
+                                    MemberChunkRerequestImpl.builder()
+                                            .catnip(catnip())
+                                            .guildId(guild)
+                                            .shardInfo(new ShardInfo(shardId, catnip().shardManager().shardCount()))
+                                            .build());
+                        } else {
+                            catnip().chunkMembers(guild);
+                            catnip().taskScheduler().setTimer(catnip().options().memberChunkTimeout(), __ -> {
+                                if(bufferState.guildCreateCache.containsKey(guild)) {
+                                    catnip().logAdapter()
+                                            .warn("Didn't recv. member chunks for guild {} after {}ms even " +
+                                                            "after retrying! You should probably " +
+                                                            "increase the value of CatnipOptions#memberChunkTimeout!",
+                                                    guild, catnip().options().memberChunkTimeout());
+                                }
+                            });
                         }
                     }
                 });
             } else {
                 // Defer 100ms to try to wait for the guild role create event
                 // that might come
-                catnip().vertx().setTimer(100L, __ -> {
+                catnip().taskScheduler().setTimer(100L, __ -> {
                     emitter().emit(event);
                     bufferState.replayGuild(guild);
                     // Replay all buffered events once we run out
@@ -209,14 +211,16 @@ public class CachingBuffer extends AbstractBuffer {
     }
     
     private void handleGuildMemberChunk(final BufferState bufferState, final JsonObject event) {
-        final JsonObject payloadData = event.getJsonObject("d");
         final String eventType = event.getString("t");
+        final JsonObject payloadData = event.getObject("d");
+        final int index = payloadData.getInt("chunk_index");
+        final int count = payloadData.getInt("chunk_count");
         
-        if(catnip().chunkMembers()) {
+        if(catnip().options().chunkMembers()) {
             final String guild = payloadData.getString("guild_id");
             cacheAndDispatch(eventType, bufferState.id(), event);
-            bufferState.acceptChunk(guild);
-            if(bufferState.doneChunking(guild)) {
+            // TODO: I assumed this was zero-based and didn't test. I should test it.
+            if(index == count - 1) {
                 emitter().emit(bufferState.guildCreate(guild));
                 bufferState.replayGuild(guild);
                 // Replay all buffered events once we run out
@@ -228,7 +232,7 @@ public class CachingBuffer extends AbstractBuffer {
     }
     
     private void handleEvent(final int id, final BufferState bufferState, final JsonObject event) {
-        final JsonObject payloadData = event.getJsonObject("d");
+        final JsonObject payloadData = event.getObject("d");
         final String eventType = event.getString("t");
         
         final String guildId = payloadData.getString("guild_id", null);
@@ -250,25 +254,30 @@ public class CachingBuffer extends AbstractBuffer {
     }
     
     private void cacheAndDispatch(final String type, final int id, final JsonObject event) {
-        // TODO: Cache updates are async - this is likely a race condition
-        //  Is there any reasonable way to fix this?
-        final JsonObject d = event.getJsonObject("d");
-        emitter().emit(event);
-        maybeCache(type, id, d);
+        final JsonObject d = event.getObject("d");
+        //noinspection ResultOfMethodCallIgnored
+        maybeCache(type, id, d).subscribe(() -> emitter().emit(event));
     }
     
-    private Future<Void> maybeCache(final String eventType, final int shardId, final JsonObject data) {
+    private Completable maybeCache(final String eventType, final int shardId, final JsonObject data) {
         if(CACHE_EVENTS.contains(eventType)) {
             try {
                 return catnip().cacheWorker().updateCache(eventType, shardId, data);
             } catch(final Exception e) {
                 catnip().logAdapter().warn("Got error updating cache for payload {}", eventType, e);
-                catnip().logAdapter().warn("Payload: {}", data.encodePrettily());
-                return Future.failedFuture(e);
+                catnip().logAdapter().warn("Payload: {}", JsonUtil.encodePrettily(data));
+                return RxHelpers.completedCompletable(catnip());
             }
         } else {
-            return Future.succeededFuture();
+            return RxHelpers.completedCompletable(catnip());
         }
+    }
+    
+    @Accessors(fluent = true)
+    @AllArgsConstructor
+    private static final class Counter {
+        @Getter
+        private final JsonObject guildCreate;
     }
     
     @Value
@@ -277,11 +286,12 @@ public class CachingBuffer extends AbstractBuffer {
         private int id;
         private final Set<String> awaitedGuilds;
         private final Map<String, Deque<JsonObject>> guildBuffers = new ConcurrentHashMap<>();
-        private final Map<String, Counter> guildChunkCount = new ConcurrentHashMap<>();
+        private final Map<String, JsonObject> guildCreateCache = new ConcurrentHashMap<>();
         private final Deque<JsonObject> buffer = new ConcurrentLinkedDeque<>();
         
-        void awaitGuild(final String id) {
+        void awaitGuild(final String id, final JsonObject event) {
             awaitedGuilds.add(id);
+            guildCreateCache.put(id, event);
         }
         
         void receiveGuildEvent(final String id, final JsonObject event) {
@@ -295,7 +305,7 @@ public class CachingBuffer extends AbstractBuffer {
         
         void replayGuild(final String id) {
             awaitedGuilds.remove(id);
-            guildChunkCount.remove(id);
+            guildCreateCache.remove(id);
             if(guildBuffers.containsKey(id)) {
                 final Deque<JsonObject> queue = guildBuffers.get(id);
                 queue.forEach(e -> cacheAndDispatch(e.getString("t"), this.id, e));
@@ -315,36 +325,8 @@ public class CachingBuffer extends AbstractBuffer {
             }
         }
         
-        void initialGuildChunkCount(final String guild, final int count, final JsonObject guildCreate) {
-            guildChunkCount.put(guild, new Counter(guildCreate, count));
-        }
-        
-        void acceptChunk(final String guild) {
-            if(guildChunkCount.containsKey(guild)) {
-                final Counter counter = guildChunkCount.get(guild);
-                counter.decrement();
-            }
-        }
-        
-        boolean doneChunking(final String guild) {
-            return !guildChunkCount.containsKey(guild) || guildChunkCount.get(guild).count() == 0;
-        }
-        
         JsonObject guildCreate(final String guild) {
-            return guildChunkCount.get(guild).guildCreate();
-        }
-    }
-    
-    @Accessors(fluent = true)
-    @AllArgsConstructor
-    private final class Counter {
-        @Getter
-        private final JsonObject guildCreate;
-        @Getter
-        private int count;
-        
-        void decrement() {
-            --count;
+            return guildCreateCache.get(guild);
         }
     }
 }
